# UselessEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  test.scene
.vscode - 副本/: launch.json  settings.json
3rd/assimp/: config.h
3rd/glad/: glad.h
3rd/imgui/: imgui.cpp
3rd/vulkan/: vulkan.hpp  vulkan_core.h
core/: main.cpp  main_thread.cpp
core/include/: base.h  context.h  context.hpp  define.hpp  engine_component.hpp  engine_object.h  engine_object.hpp
core/src/: context.cpp
editor/: entry.cpp
editor/src/: editor_test.cpp
game/: Entry.cs  Game.sln
lib/assimp/: assimp-vc143-mt.exp  assimp-vc143-mt.lib
make/: complie-shader.bat  make-mingw32.bat  make-vc2022.bat  update-resources.bat
resource/scene/: 105xlights_deferred.scenee  105xlights_fowrard.scenee  SSAO.scene  alpha_blend.scene  arena.scene  arena.scenecene  deferred.scene  deferred.scenee  deferred.sceneene  deferred_backup.scenee  deferred_vs_forward.scene  eff_dissolve.scene  light_volumn.scene  mass_test.scene  msaa_test.scene  new.scene  pbr_simple.scene  pbr_simplest.scene  pbr_texture.scene  point_light.scene  post_process.scene  spot_light.scene  test.scene  water.scene
resource/shader/: bling_phone.frag  bling_phone.vert  color.frag  color.vert  deferred_light_model_geometry.frag  deferred_light_model_geometry.vert  deferred_light_model_lighting.frag  deferred_light_model_lighting.vert  dissolve.frag  dissolve.vert  light_mode.frag  light_mode.vert  light_model.frag  light_model.vert  pbr_simple.frag  pbr_simple.vert  pbr_simplest.frag  pbr_texture.frag  pbr_texture.vert  post_process_bloom.frag  post_process_bloom.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  test.frag  test.vert  water.frag  water.vert
resource/spv/: bling_phone.frag.spv  bling_phone.vert.spv  bloom.frag.spv  color.frag.spv  color.vert.spv  deferred_light_model.frag.spv  deferred_light_model.vert.spv  deferred_light_model_lighting.frag.spv  deferred_point_light.frag.spv  deferred_shading.frag.spv  deferred_shading.vert.spv  dissolve.frag.spv  (+26 more)
(+615 files in other folders)
